--- a/app/globals.css
+++ b/app/globals.css
@@ -1,58 +1,76 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
+  @tailwind components;
+  @tailwind utilities;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
-  .loader {
-    text-align: left;
-    display: flex;
-    gap: 3px;
-  }
+  @layer base {
+    :root {
+      --background: 0 0% 100%;
+      --foreground: 240 10% 3.9%;
 
-  .loader span {
-    display: inline-block;
-    vertical-align: middle;
-    width: 7px;
-    height: 7px;
-    /* background: #4b4b4b; */
-    background: white;
-    border-radius: 50%;
-    animation: loader 0.6s infinite alternate;
-  }
+      --card: 0 0% 100%;
+      --card-foreground: 240 10% 3.9%;
 
-  .loader span:nth-of-type(2) {
-    animation-delay: 0.2s;
-  }
+      --popover: 0 0% 100%;
+      --popover-foreground: 240 10% 3.9%;
 
-  .loader span:nth-of-type(3) {
-    animation-delay: 0.6s;
-  }
+      --primary: 240 5.9% 10%;
+      --primary-foreground: 0 0% 98%;
 
-  @keyframes loader {
-    0% {
-      opacity: 1;
-      transform: scale(0.6);
+      --secondary: 240 4.8% 95.9%;
+      --secondary-foreground: 240 5.9% 10%;
+
+      --muted: 240 4.8% 95.9%;
+      --muted-foreground: 240 3.8% 46.1%;
+
+      --accent: 240 4.8% 95.9%;
+      --accent-foreground: 240 5.9% 10%;
+
+      --destructive: 0 84.2% 60.2%;
+      --destructive-foreground: 0 0% 98%;
+
+      --border: 240 5.9% 90%;
+      --input: 240 5.9% 90%;
+      --ring: 240 10% 3.9%;
+
+      --radius: 0.5rem;
     }
 
-    100% {
-      opacity: 0.3;
-      transform: scale(1);
+    .dark {
+      --background: 240 10% 3.9%;
+      --foreground: 0 0% 98%;
+
+      --card: 240 10% 3.9%;
+      --card-foreground: 0 0% 98%;
+
+      --popover: 240 10% 3.9%;
+      --popover-foreground: 0 0% 98%;
+
+      --primary: 0 0% 98%;
+      --primary-foreground: 240 5.9% 10%;
+
+      --secondary: 240 3.7% 15.9%;
+      --secondary-foreground: 0 0% 98%;
+
+      --muted: 240 3.7% 15.9%;
+      --muted-foreground: 240 5% 64.9%;
+
+      --accent: 240 3.7% 15.9%;
+      --accent-foreground: 0 0% 98%;
+
+      --destructive: 0 62.8% 30.6%;
+      --destructive-foreground: 0 0% 98%;
+
+      --border: 240 3.7% 15.9%;
+      --input: 240 3.7% 15.9%;
+      --ring: 240 4.9% 83.9%;
     }
   }
-}
 
-body {
-  margin: 0px !important;
-}
+  @layer base {
+    * {
+      @apply border-border;
+    }
+    body {
+      @apply bg-background text-foreground;
+    }
+  }
